--- a/issuetracker.mvc/issuetracker.mvc.csproj
+++ b/issuetracker.mvc/issuetracker.mvc.csproj
@@ -15,6 +15,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
+    <PackageReference Include="Slugify.Core" Version="3.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
