--- a/issuetracker.ViewModels/issuetracker.ViewModels.csproj
+++ b/issuetracker.ViewModels/issuetracker.ViewModels.csproj
@@ -5,4 +5,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+
+ <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  
 </Project>
