add reference to entities

--- a/issuetracker.ViewModels/issuetracker.ViewModels.csproj
+++ b/issuetracker.ViewModels/issuetracker.ViewModels.csproj
@@ -10,5 +10,10 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+
+ <ItemGroup>
+   <ProjectReference Include="..\issuetracker.Entities\issuetracker.Entities.csproj" />
+ </ItemGroup>
+
   
 </Project>
