add section for email configuration

--- a/issuetracker.mvc/appsettings.json
+++ b/issuetracker.mvc/appsettings.json
@@ -11,5 +11,13 @@
     "Database": "issuetracker",
     "Username": "admin",
     "Password": ""
+  },
+  "EmailOptions": {
+    "HostAddress": "",
+    "HostPort": "",
+    "HostUsername": "",
+    "HostPassword": "",
+    "SenderEmail": "",
+    "SenderName": ""
   }
 }
