add section for AWS

--- a/issuetracker.Api/appsettings.json
+++ b/issuetracker.Api/appsettings.json
@@ -19,5 +19,13 @@
     "HostPassword": "",
     "SenderEmail": "",
     "SenderName": ""
+  },
+  "AWS": {
+    "AccessKeyId": "",
+    "SecretAccessKey": "",
+    "Region": ""
+  },
+  "UI": {
+    "Url": "http://localhost:4200"
   }
 }
