--- a/issuetracker.Api/issuetracker.Api.csproj
+++ b/issuetracker.Api/issuetracker.Api.csproj
@@ -17,7 +17,6 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
     <PackageReference Include="Slugify.Core" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
@@ -29,6 +28,7 @@
     <ProjectReference Include="..\issuetracker.Email\issuetracker.Email.csproj" />
     <ProjectReference Include="..\issuetracker.ViewModels\issuetracker.ViewModels.csproj" />
     <ProjectReference Include="..\issuetracker.Dtos\issuetracker.Dtos.csproj" />
+    <ProjectReference Include="..\issuetracker.Aws\issuetracker.Aws.csproj" />
   </ItemGroup>
 
 </Project>
